# GEMDAT

./: .actrc  .bumpversion.cfg  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  flake.nix  mkdocs.yml  paths.ipynb  pyproject.toml  requirements.txt  requirements_full.txt  shape_analysis2.ipynb
.github/workflows/: code-style.yml  goac.yaml  publish.yaml  tests.yaml
autogen/: frac_and_disp.py  frac_to_cart.py  jumps_vs_dist.py  plot_from_displacement.py  plot_sites.py  possible_collective.py  vibration_properties.py
dashboard/: run.py
docs/: api.md  dashboard.md  getting_started.md  index.md  plotting.md
docs/api/: gemdat.md  gemdat_collective.md  gemdat_crystallizer.md  gemdat_io.md  gemdat_jumps.md  gemdat_legacy.md  gemdat_plots.md  gemdat_rdf.md  gemdat_simulation_metrics.md  gemdat_sites.md  gemdat_trajectory.md  gemdat_transitions.md  gemdat_utils.md  gemdat_volume.md
docs/notebooks/: CIF.ipynb  auto.ipynb  simple.ipynb
scripts/: analyse_md.py
src/: __init__.py  analyse_md.py  calc_dist_sqrd_frac.py  calc_rates.py  calc_rdfs.py  calc_site_occups.py  collective.py  compare_sims.py  constants.py  data.py  displacements.py  extras.py  find_sites.py  frac_to_cart.py  io.py  legacy.py  plot.py  plot_collective.py  plot_from_displacement.py  plot_rdfs.py  plot_sites.py  project.py  rates.py  rdf.py  read_lammps.py  read_vasp.py  simulation_metrics.py  sites.py  tracer.py  tracer_properties.py  trajectory.py  transitions.py  utils.py  vibration.py  volume.py
src/autogen/: analyse_md.py  make_movie.py  read_vasp.py
src/calculate/: __init__.py  _displacements.py  calc_displacements.py  calc_vibration.py  displacements.py  extras.py  tracer.py  vibration.py
src/dashboard/: _shared.py  gemdash.py  run.py  shared.py
src/data/: argyrodite.cif  lagp.cif  latp.cif  li3ps4.cif
src/gemdat/: __init__.py  _plot_backend.py  caching.py  collective.py  crystallizer.py  gemdat_rotation.py  io.py  jumps.py  legacy.py  metrics.py  orientations.py  path.py  rdf.py  rotations.py  segmentation.py  shape.py  shape_analysis.ipynb  simulation_metrics.py  sites.py  test4.py  trajectory.py  transitions.py  utils.py  volume.py
src/gemdat/dashboard/: __init__.py  _shared.py  gemdash.py  run.py
src/gemdat/data/: latp.cif  lisnps.cif  mno2_lambda.cif  na3ps4.cif
src/gemdat/plots/: __init__.py  _density.py  _displacements.py  _jumps.py  _paths.py  _rdf.py  _shape.py  _shared.py  _vibration.py
src/gemdat/plots/matplotlib/: __init__.py  _arrhenius.py  _autocorrelation.py  _bond_length_distribution.py  _collective_jumps.py  _displacement_histogram.py  _displacement_per_atom.py  _displacement_per_element.py  _displacements.py  _energy_along_path.py  _frequency_vs_occurence.py  _jumps.py  _jumps_3d.py  _jumps_3d_animation.py  _jumps_vs_distance.py  _jumps_vs_time.py  _msd_kinisi.py  _msd_per_element.py  _orientations.py  _path_on_grid.py  _paths.py  _polar.py  _radial_distribution.py  _radial_distribution_between_species.py  _rectilinear.py  _rotations.py  _shape.py  _vibration.py  _vibrational_amplitudes.py
src/gemdat/plots/plotly/: __init__.py  _arrhenius.py  _autocorrelation.py  _bond_length_distribution.py  _collective_jumps.py  _density.py  _displacement_histogram.py  _displacement_per_atom.py  _displacement_per_element.py  _displacements.py  _energy_along_path.py  _frequency_vs_occurence.py  _jumps.py  _jumps_3d.py  _jumps_vs_distance.py  _jumps_vs_time.py  _msd_kinisi.py  _msd_per_element.py  _path_on_grid.py  _paths.py  _plot3d.py  _polar.py  _radial_distribution.py  _radial_distribution_between_species.py  _rectilinear.py  _shape.py  _vibration.py  _vibrational_amplitudes.py
src/plots/: __init__.py  _displacements.py  _jumps.py  _rdf.py  _vibration.py  displacements.py  jumps.py  vibration.py
tests/: conftest.py  crystallizer_test.py  displacement_test.py  install_goac_test.py  integration_plot_test.py  integration_test.py  io_test.py  metrics_test.py  orientations_test.py  playwright_test.py  plots_tests.py  rotations_test.py  segmentation_test.py  shape_test.py  simulation_metrics_test.py  sites_test.py  tracer_test.py  trajectory_test.py  utils_test.py  vibration_test.py  volume_test.py
tests/data/short_simulation/: OUTCAR  vasprun.xml
tests/helpers/: __init__.py
tests/integration/: cache_test.py  conftest.py  crystallizer_test.py  jumps_test.py  orientations_test.py  path_test.py  plot_mpl_test.py  plot_plotly_test.py  plot_test.py  rdf_test.py  rotations_test.py  shape_test.py  sites_test.py  trajectory_test.py  transitions_test.py
tools/: flake.nix  generate_requirements_txt.py  install_goac.py
