[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[project]
name = "GEMDAT"
version = "1.6.0"
description = "Generalized Molecular Dynamics Analysis Tool"
readme = "README.md"
requires-python = ">=3.10"
authors = [
	{name = "Victor Azizi", email = "v.azizi@esciencecenter.nl"},
	{name = "Stef Smeets", email = "s.smeets@esciencecenter.nl"},
]
keywords = [
    "analysis",
    "molecular dynamics",
    "diffusion",
    "batteries",
]
license = {text = "Apache 2.0 License"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
  'matplotlib >= 3.6.0',
  'MDAnalysis',
  'numpy',
  'pymatgen >= 2024.1.26, != 2024.2.20',
  'rich',
  'scikit-image',
  'scipy',
]

[project.urls]
homepage = "https://github.com/GEMDAT-repos/GEMDAT"
issues = "https://github.com/GEMDAT-repos/GEMDAT/issues"
documentation = "https://gemdat.readthedocs.io"
changelog = "https://github.com/GEMDAT-repos/GEMDAT/releases"

[project.optional-dependencies]
develop = [
    "kaleido < 0.4",  # 0.4: https://github.com/plotly/Kaleido/issues/223
    "bump-my-version",
    "coverage[toml]",
    "mypy",
    "pre-commit",
    "pytest >= 8.1",
]

docs = [
    "markdown-include",
    "mkdocs",
    "mkdocs-jupyter",
    "mkdocs-material",
    "mkdocstrings[python]",
]

publishing = [
    "twine",
    "wheel",
    "build",
]

[tool.setuptools]
package-dir = {"gemdat" = "src/gemdat" }
include-package-data = true

[tool.coverage.run]
branch = true
source = ["gemdat"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 96
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes `E` and `F` codes by default.
select = [
	"F",  # Pyflakes
	"E",  # pycodestyle (error)
	"W",  # pycodestyle (warning)
    "I",  # isort
]

[tool.ruff.lint.isort]
known-first-party=["gemdat"]
known-third-party = ["pymatgen"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.mypy]
files = ["src", "tests"]
allow_redefinition = true
ignore_missing_imports = true

[tool.bumpversion]
current_version = "1.6.0"

[[tool.bumpversion.files]]
filename = "src/gemdat/__init__.py"
search = "__version__ = '{current_version}'"
replace = "__version__ = '{new_version}'"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "CITATION.cff"
search = "version: {current_version}"
replace = "version: {new_version}"

[[tool.bumpversion.files]]
filename = "README.md"
search = "(Version {current_version})"
replace = "(Version {new_version})"
